Do some physics device touch screen testing....

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 EditorStartupMap=/Game/Maps/MainLevel.MainLevel
-GlobalDefaultGameMode=/Script/TootRepsi.TootMainGM
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -236,13 +236,14 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
 bAuthorizeAutomaticWidgetVariableCreation=False
-FontDPIPreset=Standard
+FontDPIPreset=Unreal
 FontDPI=72
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=1455.000000,Value=0.780000),(Time=1485.000000,Value=0.780000),(Time=1510.000000,Value=0.780000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/TootRepsi")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/TootRepsi")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -257,4 +258,10 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.tootzoe.TootRepsi
+TargetSDKVersion=34
+MinSDKVersion=31
+Orientation=Landscape
 
