--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
 EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -60,7 +70,7 @@ r.Lumen.TraceMeshSDFs=1
 r.Lumen.ScreenTracingSource=0
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
 r.MegaLights.EnableForProject=False
-r.RayTracing.Shadows=False
+r.RayTracing.Shadows=True
 r.Shadow.Virtual.Enable=1
 r.RayTracing=True
 r.RayTracing.UseTextureLod=False
@@ -72,7 +82,7 @@ r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
 r.VertexFoggingForOpaque=True
-r.SeparateTranslucency=True
+r.SeparateTranslucency=False
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.LocalFogVolume.ApplyOnTranslucent=False
@@ -82,8 +92,8 @@ r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=False
 r.Deferred.SupportPrimitiveAlphaHoldout=False
-r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
@@ -226,8 +236,8 @@ PreferredAccessor=NullSourceCodeAccessor
 +TargetedRHIs=SF_VULKAN_SM6
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
@@ -243,7 +253,7 @@ UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/TootRepsi")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/TootRepsi")
-bUseFixedFrameRate=False
+bUseFixedFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -264,4 +274,7 @@ PackageName=com.tootzoe.TootRepsi
 TargetSDKVersion=34
 MinSDKVersion=31
 Orientation=Landscape
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
 
