testing dedicated server....

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectID=3857720C4813A05D77EEE4A194BED6CD
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
+BuildTarget=TootRepsi
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -99,7 +99,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
-+MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/Maps/FlyBotLevel")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
