--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/Maps/FlyBotLevel.FlyBotLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,10 +10,10 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainLevel.MainLevel
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
-GlobalDefaultServerGameMode=None
+GameDefaultMap=/Game/Maps/FlyBotLevel.FlyBotLevel
+ServerDefaultMap=/Game/Maps/FlyBotLevel.FlyBotLevel
+GlobalDefaultGameMode=/Game/Core/BP_TootFlyBotGM.BP_TootFlyBotGM_C
+GlobalDefaultServerGameMode=/Game/Core/BP_TootFlyBotGM.BP_TootFlyBotGM_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -277,4 +277,9 @@ Orientation=Landscape
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
+
+
+
+;[/Script/OnlineSubsystemUtils.IpNetDriver]
+;NetServerMaxTickRate=200
 
